02. 자동차 360도 회전 - 탭 기능 구현

--- a/02.car-display/css/ui-style.css
+++ b/02.car-display/css/ui-style.css
@@ -34,7 +34,7 @@ html,body{
   display: block;
   width: 960px;
   height: 540px;
-  background-position: 0 0;
+  background-position: -960px 0;
   background-repeat: no-repeat;
   box-sizing:border-box;
 }
@@ -63,6 +63,7 @@ html,body{
   border: none;
   cursor: pointer;
 }
+.tab__button.is-active,
 .tab__button:hover{
   background-color: #f1f0f0;
 }
